# telegram-quizlet-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app_run.py  docker-compose.yml  main.py  model.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a801c877d2a_initial.py  0fb7996f0e93_add_collection_and_cards.py  0fb7996f0e93_add_users.py  ef0b4f66c587_add_cards_and_collections.py  ef0b4f66c587_create_table_users.py
app/: config.py  factory.py
app/filters/: online_mode.py  pending.py
app/handlers/: __init__.py  collections.py  game_mode.py  online_mode.py  solo_mode.py  user.py
app/keyboards/: collections.py  common.py  game_mode.py  online_mode.py  solo_mode.py  user.py
app/middlewares/: redis_kv.py
app/models/: __init__.py  collection.py  online_room.py  solo_mode.py  user.py
app/repos/: base.py  collections.py  items.py  solo_mode.py  users.py
app/services/: collections_facade.py  db.py  game_mode.py  hints.py  importers.py  online_mode.py  redis_client.py  redis_kv.py  share_code.py  solo_mode.py  user_profile.py
app/texts/: game_mode.py  online_mode.py  solo_mode.py  user_profile.py
config/: .env.template  pytest.ini
infra/: Dockerfile  Dockerfile.neural  Makefile  docker-compose.yml
neuralnet/: model.py
tests/: conftest.py
tests/e2e/: test_main_lifecycle.py
tests/integration/: test_with_repos_and_solo_data.py
tests/unit/: test_handlers_collections.py  test_handlers_online_mode.py  test_handlers_solo_mode.py  test_handlers_user.py  test_hints_asyncmock.py  test_importers.py  test_importers_edge_cases_extra.py  test_online_mode_pending.py  test_online_room.py  test_online_room_edge_cases.py  test_redis_kv.py  test_redis_kv_asyncmock.py  test_repos.py  test_share_code.py  test_solo_mode_services.py  test_solo_session_edge_cases.py  test_user_profile_services.py
