[project]
name = "telegram-quizlet-bot"
version = "0.1.0"
description = "Telegram bot with quizlet-alike system"
authors = [
    {name = "Echways",email = "Echways@gmail.com"},
    
]
license = MIT
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
