[project]
name = "telegram-quizlet-bot"
version = "0.1.0"
description = "Qwizlet-like telegram bot"
authors = [
    {name = "Echways",email = "identyfly@gmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "poetry (>=2.2.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=7.0.1,<8.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "pydantic (>=2.11,<2.12.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "isort (>=7.0.0,<8.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.32.0,<0.33.0)",
]
neural_reqs = [
    "triton (>=3.5.0,<4.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "transformers (>=4.45.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["F821"]